--- a/META.yml
+++ b/META.yml
@@ -30,4 +30,4 @@ resources:
   homepage: http://search.cpan.org/dist/IRI/
   license: http://dev.perl.org/licenses/
   repository: http://github.com/kasei/perl-iri/
-version: '0.001'
+version: 0.001_01
