--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.10'
+generated_by: 'Module::Install version 1.12'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,11 +23,13 @@ no_index:
     - t
     - xt
 requires:
-  Moose: 2
+  Moo: 0
+  MooX::HandlesVia: 0
+  Type::Tiny: 0
   perl: 5.14.0
 resources:
   bugtracker: https://github.com/kasei/perl-iri/issues
   homepage: http://search.cpan.org/dist/IRI/
   license: http://dev.perl.org/licenses/
   repository: http://github.com/kasei/perl-iri/
-version: '0.003'
+version: 0.003_01
