--- a/META.yml
+++ b/META.yml
@@ -32,4 +32,4 @@ resources:
   homepage: http://search.cpan.org/dist/IRI/
   license: http://dev.perl.org/licenses/
   repository: http://github.com/kasei/perl-iri/
-version: 0.003_02
+version: '0.004'
